--- a/deploy/auth-server-template.yaml
+++ b/deploy/auth-server-template.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   containers:
   - name: auth-server-template
-    image: # Set image here
+    # Change this if you are using your own container registry.
+    image: e4kpreview.azurecr.io/auth-server-template:latest
     imagePullPolicy: Always
     ports:
       - name: https
