--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -2,3 +2,17 @@ name: docker_build
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - release/*
+
+jobs:
+  docker_build:
+    name: 'Build docker containers'
+    runs-on: ubuntu-latest
+    environment: production
+
+    defaults:
+      run:
+        shell: bash
+    
