--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,3 +15,9 @@ RUN wget -q https://raw.githubusercontent.com/dapr/cli/master/install/install.sh
 RUN wget https://github.com/EdJoPaTo/mqttui/releases/download/v0.19.0/mqttui-v0.19.0-x86_64-unknown-linux-gnu.deb && \
     sudo apt-get install ./mqttui-v0.19.0-x86_64-unknown-linux-gnu.deb && \
     rm -rf ./mqttui-v0.19.0-x86_64-unknown-linux-gnu.deb
+
+# Install k9s
+RUN wget https://github.com/derailed/k9s/releases/download/v0.28.0/k9s_Linux_amd64.tar.gz && \
+    tar xf k9s_Linux_amd64.tar.gz --directory=/usr/local/bin k9s && \
+    chmod +x /usr/local/bin/k9s && \
+    rm -rf k9s_Linux_amd64.tar.gz
