--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - release/*
 
+env:
+  REGISTRY: azbluefin.azurecr.io 
+
 jobs:
   docker_build:
     name: 'Build docker containers'
@@ -15,3 +18,32 @@ jobs:
       run:
         shell: bash
     
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v4
+
+      - name: 'Login with Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 'Docker Login'
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          tags: |
+            azbluefin.azurecr.io:latest
+            azbluefin.azurecr.io:${{ github.sha }}
+          context: .
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
