Add new test pipelines and modify build pipeline

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -53,6 +53,7 @@ jobs:
           tags: |
             ${{ inputs.registry }}:latest
             ${{ inputs.registry }}:${{ github.sha }}
+            ${{ inputs.registry }}:${{ github.ref_name }}
           context: ${{ inputs.context }}
           file: ${{ inputs.file }}
           push: true
