--- a/.github/workflows/krill_build.yml
+++ b/.github/workflows/krill_build.yml
@@ -1,10 +1,9 @@
 name: krill_build
 
 on:
-  workflow_dispatch:
   push:
-    paths:
-      - samples/krill/**
+    tags: 
+      - 'v*.*.*'
 
 jobs:
   call-docker-build:
