Make pushing with tag conditional

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -53,7 +53,16 @@ jobs:
           tags: |
             ${{ inputs.registry }}:latest
             ${{ inputs.registry }}:${{ github.sha }}
+          context: ${{ inputs.context }}
+          file: ${{ inputs.file }}
+          push: true
+
+      - name: Build and Push if Pushed with Tag
+        uses: docker/build-push-action@v5
+        with:
+          tags: |
             ${{ inputs.registry }}:${{ github.ref_name }}
           context: ${{ inputs.context }}
           file: ${{ inputs.file }}
           push: true
+        if: ${{ github.event_name == 'push' }}
