--- a/.github/workflows/krill_build.yml
+++ b/.github/workflows/krill_build.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       registry: makocr.azurecr.io/krill
       file: Dockerfile
-      context: ./samples/krill/
+      context: samples/krill/
     secrets:
       azureCredentials: ${{ secrets.AZURE_CREDENTIALS }}
       registryLoginServer: ${{ secrets.REGISTRY_LOGIN_SERVER }}
