correctly track sensors
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/tutorials/mq-dapr-hotpath-coldpath/Dockerfile
+++ b/tutorials/mq-dapr-hotpath-coldpath/Dockerfile
@@ -9,4 +9,4 @@ RUN python -m pip install --no-cache -r requirements.txt
 WORKDIR /app
 COPY . /app
 
-CMD ["python", "subscriber.py"]
+CMD ["python", "app.py"]
