--- a/tutorials/mq-dapr-hotpath-coldpath/Dockerfile.debug
+++ b/tutorials/mq-dapr-hotpath-coldpath/Dockerfile.debug
@@ -26,4 +26,4 @@ RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /
 USER appuser
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
-CMD ["python", "subscriber.py"]
+CMD ["python", "app.py"]
