Add mqqt-client YAML config

--- a/samples/quickstarts/opc-ua-connector-0.yaml
+++ b/samples/quickstarts/opc-ua-connector-0.yaml
@@ -1,3 +1,4 @@
+# Important: do not use in production environments
 apiVersion: deviceregistry.microsoft.com/v1beta1
 kind: AssetEndpointProfile
 metadata:
