Ethanperry/anomaly detection (#33)
Introduces the following new tools:
1. EWMA Anomaly Detection Server
2. HTTP/GRPC Shift Calculator Server
3. SQL Callout Server

---------

Co-authored-by: Ethan <ethan@ethansstress.guest.corp.microsoft.com>

--- a/samples/http-grpc-callout/cmd/config.yml
+++ b/samples/http-grpc-callout/cmd/config.yml
@@ -22,7 +22,7 @@ servers:
           }
   grpc:
     port: 3334
-    outputs: ['output1', 'output4']
+    outputs: ["output1", "output4"]
 outputs:
   - name: output1
     type: stdout
@@ -41,5 +41,3 @@ outputs:
     qos: 1
     path: grpc/example
     endpoint: localhost:1883
-
-
