--- a/samples/industrial-data-simulator/configs/simple/config.yml
+++ b/samples/industrial-data-simulator/configs/simple/config.yml
@@ -1,21 +1,21 @@
 metrics:
   type: prometheus
   port: 2114
-logLevel: 1
+logLevel: 0
 simulation:
   target:
-    host: localhost
+    host: aio-mq-dmqtt-frontend
     port: 1883
   sites:
     - name: site0
       mqttVersion: v5
-      assetCount: 3
+      assetCount: 1
       tags:
         - id: float_1
           configuration: x
           count: 1
       rate:
-        messagesPerPeriod: 2
+        messagesPerPeriod: 1
         periodSeconds: 1
         tagsPerMessage: 2
       payloadFormat: OPCUA
