--- a/samples/http-grpc-shift-calculation/manifest.yml
+++ b/samples/http-grpc-shift-calculation/manifest.yml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
         - name: http-grpc-shift
-          image: makocr.azurecr.io/http-grpc-shift-calculation:latest
+          image: ghcr.io/azure-samples/explore-iot-operations/http-grpc-shift-calculation:latest
           imagePullPolicy: Always
           ports:
           - name: http
