Changed configuration for industrial data simulator

--- a/samples/industrial-data-simulator/manifest.yml
+++ b/samples/industrial-data-simulator/manifest.yml
@@ -12,7 +12,7 @@ data:
     logLevel: 0
     simulation:
       target:
-        host: doe-mqtt
+        host: aio-mq-dmqtt-frontend
         port: 1883
       sites:
         - name: site0
