Added more workflows for ghcr and changed manifest and documentation … (#44)
Add ghcr workflows for remaining samples and upgrade documentation.

--- a/samples/industrial-data-simulator/manifest.yml
+++ b/samples/industrial-data-simulator/manifest.yml
@@ -48,7 +48,7 @@ spec:
     spec:
       containers:
         - name: data-simulator
-          image: makocr.azurecr.io/industrial-data-simulator:latest
+          image: ghcr.io/azure-samples/explore-iot-operations/industrial-data-simulator:latest
           imagePullPolicy: Always
           ports:
           - name: prometheus
